# obtanium-tauri

./: INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AppCard.tsx  Layout.tsx  StatusBadge.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  form.tsx  select.tsx
src/hooks/: use-toast.ts
src/lib/: api.ts  db.ts  release-checker.ts  types.ts
src/pages/: AddApp.tsx  AppDetail.tsx  AppLibrary.tsx  Dashboard.tsx  Settings.tsx
