[package]
name = "obtanium"
version = "0.1.0"
description = "Obtanium — Linux app update tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "obtanium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "obtanium"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
